[metadata]
name = airtext
version = 5.0.2
author = Mitchell Bregman
author_email = mitch@airtext.io
keywords = airtext sms twilio proxy aws lambda
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.8
include_package_data=true
package_dir=
  =src
packages= find:
install_requires =
    boto3==1.24.50
    Jinja2==3.1.2
    psycopg2-binary==2.9.3
    pydantic==1.10.2
    sqlalchemy==1.4.40
    twilio==7.12.1

[options.packages.find]
where=src

[options.extras_require]
dev =
    alembic==1.8.1
    ipdb==0.13.9
    ipython==8.2.0
    black>=21.6b0
    flake8>=3.9.2
    isort>=5.9.3
    mypy>=0.910
pkg =
    build==0.8.0
    wheel==0.37.1
    twine==4.0.1
test =
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-runner>=5.3.1

[aliases]
test = pytest
